[gd_scene load_steps=4 format=3 uid="uid://cv2pymcpiotcw"]

[ext_resource type="Texture2D" uid="uid://svwmdhvvxrws" path="res://Graphics/Boss/Boss_DrillEggman.png" id="1_8yio5"]
[ext_resource type="Script" path="res://Entities/Boss/Boss Components/DrillEggman_Car.gd" id="1_hevcp"]
[ext_resource type="PackedScene" uid="uid://b5mitgaj2uh62" path="res://Entities/Boss/Boss Components/DrillEggmanWheel.tscn" id="2_ie5jq"]

[node name="DrillEggmanCar" type="Node2D"]
z_index = 5
script = ExtResource("1_hevcp")

[node name="DrillEggmanWheel3" parent="." instance=ExtResource("2_ie5jq")]
top_level = true
position = Vector2(-36, 15)
tire = 1

[node name="DrillEggmanWheel4" parent="." instance=ExtResource("2_ie5jq")]
top_level = true
position = Vector2(9, 15)
tire = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_8yio5")

[node name="DrillEggmanWheel" parent="." instance=ExtResource("2_ie5jq")]
top_level = true
position = Vector2(-15, 15)

[node name="DrillEggmanWheel2" parent="." instance=ExtResource("2_ie5jq")]
top_level = true
position = Vector2(31, 15)
